@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -53,7 +53,6 @@ import RTi.Util.Time.DateTime;
 /**
  * Class to read Delft FEWS PI XML files.
  * For information, see:  https://publicwiki.deltares.nl/display/FEWSDOC/PiTimeSeriesSerializer.java
- * @author sam
  */
 public class DelftFewsPiXmlReader {
 
@@ -168,8 +167,8 @@ public class DelftFewsPiXmlReader {
 			ts.setProperty("ensembleMemberIndex", DMIUtil.isMissing(ensembleMemberIndex)? "" : ensembleMemberIndex);
 			ts.setProperty("forecastDate", (forecastDateTime == null)? null : forecastDateTime);
 			ts.setProperty("fileDescription", DMIUtil.isMissing(fileDescription)? "" : fileDescription);
-			ts.setProperty("index", new Integer(its));
-			ts.setProperty("index1", new Integer(its + 1));
+			ts.setProperty("index", Integer.valueOf(its));
+			ts.setProperty("index1", Integer.valueOf(its + 1));
 			ts.setProperty("longName", DMIUtil.isMissing(longName)? "" : longName);
 			ts.setProperty("lat", DMIUtil.isMissing(lat)? null : Double.parseDouble(lat));
 			ts.setProperty("lon", DMIUtil.isMissing(lon)? null : Double.parseDouble(lon));
@@ -460,7 +459,7 @@ public class DelftFewsPiXmlReader {
     	int timeZoneShift = 0; // Hour to add to times in the file
     	if ( timeZoneOffset == null ) {
     		// Default to file time zone
-    		timeZoneOffset = new Integer(timeZoneFile);
+    		timeZoneOffset = Integer.valueOf(timeZoneFile);
     	}
 		// Time zone is requested as an hour offset from GMT
 		// Compute an actual shift
