@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -132,7 +132,7 @@ throws CommandWarningException, CommandException
 	
 	CommandStatus status = getCommandStatus();
 	CommandProcessor processor = getCommandProcessor();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -161,7 +161,7 @@ throws CommandWarningException, CommandException
 	        	Message.printStatus(2,routine,"StartLogEnabled=" + StartLogEnabled + " - logging will always go to main log file \"" + Message.getLogFile() + "\".");
 	        }
 	        try {
-	        	processor.setPropContents("StartLogEnabled",new Boolean(StartLogEnabled));
+	        	processor.setPropContents("StartLogEnabled",Boolean.valueOf(StartLogEnabled));
 	    	}
 	    	catch ( Exception e ) {
 	    		message = "Error setting StartLogEnabled property in processor (" + e + ").";
