@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -530,7 +530,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	CommandProcessor processor = getCommandProcessor();
 	CommandPhaseType commandPhase = CommandPhaseType.RUN;
 	CommandStatus status = getCommandStatus();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -967,14 +967,14 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
                     	// Read the ensemble for the ensemble ID in the trace
                 		ReclamationHDB_EnsembleTrace trace = traceList.get(0);
                 		List<Integer> ensembleIDList = new ArrayList<Integer>();
-                		ensembleIDList.add(new Integer(trace.getEnsembleID()));
+                		ensembleIDList.add(Integer.valueOf(trace.getEnsembleID()));
                 		List<ReclamationHDB_Ensemble> ensembleList = dmi.readRefEnsembleList(null, ensembleIDList, -1);
                 		if ( ensembleList.size() == 1 ) {
 		                	// Set the processor property.
                 			ReclamationHDB_Ensemble ensemble = ensembleList.get(0);
 		                    request_params = new PropList ( "" );
 		                    request_params.setUsingObject ( "PropertyName", EnsembleIDProperty );
-		                    request_params.setUsingObject ( "PropertyValue", new Integer(ensemble.getEnsembleID()) );
+		                    request_params.setUsingObject ( "PropertyValue", Integer.valueOf(ensemble.getEnsembleID()) );
 		                    try {
 		                        processor.processRequest( "SetProperty", request_params);
 		                    }
