@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -335,7 +335,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	PropList parameters = getCommandParameters();
 	CommandProcessor processor = getCommandProcessor();
     CommandStatus status = getCommandStatus();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -382,10 +382,10 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	        // Have a valid TSID - make a request to the processor...
 	        PropList request_params = new PropList ( "" );
 	        request_params.set ( "TSID", TSID );
-	        request_params.setUsingObject ( "WarningLevel", new Integer(warning_level) );
+	        request_params.setUsingObject ( "WarningLevel", Integer.valueOf(warning_level) );
 	        request_params.set ( "CommandTag", command_tag );
 	        request_params.set ( "IfNotFound", IfNotFound );
-	        request_params.setUsingObject ( "ReadData", new Boolean(readData) );
+	        request_params.setUsingObject ( "ReadData", Boolean.valueOf(readData) );
 	        CommandProcessorRequestResultsBean bean = null;
 	        try {
 	            bean = processor.processRequest( "ReadTimeSeries", request_params);
