@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -192,12 +192,12 @@ CommandWarningException, CommandException
 		if ( IgnoreLEZero.equalsIgnoreCase(_True) ) {
 		    Message.printStatus ( 2, routine,
 		    "Values <= 0 will be treated as missing when computing historical averages." );
-		    processor.setPropContents ( "IgnoreLEZero", new Boolean(true) );
+		    processor.setPropContents ( "IgnoreLEZero", Boolean.valueOf(true) );
 		}
 		else if ( IgnoreLEZero.equalsIgnoreCase(_False) ){
 		    Message.printStatus ( 2, routine,
             "Values <= 0 WILL NOT be treated as missing when computing historic averages." );
-		    processor.setPropContents ( "IgnoreLEZero", new Boolean(false) );
+		    processor.setPropContents ( "IgnoreLEZero", Boolean.valueOf(false) );
 		}
 	}
 	catch ( Exception e ) {
