@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -278,7 +278,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     
 	CommandProcessor processor = getCommandProcessor();
     CommandStatus status = getCommandStatus();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -326,10 +326,10 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     			propObject = DateTime.parse(stringProp);
     		}
     		else if ( propertyType.equalsIgnoreCase(_Double) ) {
-    			propObject = new Double(stringProp);
+    			propObject = Double.valueOf(stringProp);
     		}
     		else if ( propertyType.equalsIgnoreCase(_Integer) ) {
-    			propObject = new Integer(stringProp);
+    			propObject = Integer.valueOf(stringProp);
     		}
     		else {
     			// Default
@@ -366,10 +366,10 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     			propertyObject = new DateTime(DateTime.DATE_CURRENT);
     		}
     		else if ( propertyType.equalsIgnoreCase(_Double) ) {
-    			propertyObject = new Double(1.0);
+    			propertyObject = Double.valueOf(1.0);
     		}
     		else if ( propertyType.equalsIgnoreCase(_Integer) ) {
-    			propertyObject = new Integer(1);
+    			propertyObject = Integer.valueOf(1);
     		}
     		else {
     			propertyObject = "";
