@@ -4,7 +4,7 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2024 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -543,7 +543,7 @@ CommandWarningException, CommandException {
                 if ( filePath.isFile() ) {
                 	rec.setFieldValue(typeCol,"File");
                 	// File size.
-                	rec.setFieldValue(sizeCol,new Long(Files.size(path)));
+                	rec.setFieldValue(sizeCol,Long.valueOf(Files.size(path)));
                 }
                 else if ( filePath.isDirectory() ) {
                 	rec.setFieldValue(typeCol,"Folder");
